--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "postcss-import",
-  "version": "10.0.0",
+  "name": "postcss-import-sync",
+  "version": "1.0.0",
   "description": "PostCSS plugin to import CSS files",
   "keywords": [
     "css",
@@ -10,9 +10,9 @@
     "node modules",
     "npm"
   ],
-  "author": "Maxime Thirouin",
+  "author": "Long Ho",
   "license": "MIT",
-  "repository": "https://github.com/postcss/postcss-import.git",
+  "repository": "https://github.com/longlho/postcss-import-sync",
   "files": [
     "index.js",
     "lib"
@@ -25,22 +25,13 @@
   },
   "devDependencies": {
     "ava": "^0.19.1",
-    "eslint": "^3.19.0",
-    "eslint-config-i-am-meticulous": "^6.0.1",
-    "eslint-plugin-import": "^2.2.0",
     "npmpub": "^3.0.1",
     "postcss-scss": "^1.0.0",
-    "prettier": "^1.3.1",
-    "prettier-eslint-cli": "^4.0.0",
-    "sugarss": "^1.0.0"
+    "prettier": "^1.5.3"
   },
   "scripts": {
-    "lint": "prettier-eslint \"**/*.js\" --write --semi false --trailing-comma es5",
-    "pretest": "npm run lint",
     "test": "ava",
-    "release": "npmpub"
-  },
-  "eslintConfig": {
-    "extends": "eslint-config-i-am-meticulous"
+    "release": "npmpub",
+    "prettier": "prettier --print-width=120 --tab-width=4 --single-quote --trailing-comma=es5 --no-semi --write 'lib/*.js' || true"
   }
 }
