--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postcss-import-sync",
+  "name": "postcss-import-sync2",
   "version": "1.0.0",
   "description": "PostCSS plugin to import CSS files",
   "keywords": [
@@ -18,15 +18,15 @@
     "lib"
   ],
   "dependencies": {
-    "postcss": "^6.0.1",
-    "postcss-value-parser": "^3.2.3",
+    "postcss": "^6.0.9",
+    "postcss-value-parser": "^3.3.0",
     "read-cache": "^1.0.0",
-    "resolve": "^1.1.7"
+    "resolve": "^1.4.0"
   },
   "devDependencies": {
-    "ava": "^0.19.1",
-    "npmpub": "^3.0.1",
-    "postcss-scss": "^1.0.0",
+    "ava": "^0.22.0",
+    "npmpub": "^3.1.0",
+    "postcss-scss": "^1.0.2",
     "prettier": "^1.5.3"
   },
   "scripts": {
