--- a/package.json
+++ b/package.json
@@ -18,20 +18,29 @@
     "lib"
   ],
   "dependencies": {
-    "postcss": "^7",
-    "postcss-value-parser": "^3.3.1",
+    "postcss-value-parser": "^4.1.0",
     "read-cache": "^1.0.0",
-    "resolve": "^1.8.1"
+    "resolve": "^1.20.0"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
+    "ava": "^3.15.0",
+    "esm": "^3.2.25",
     "npmpub": "4",
-    "postcss-scss": "2",
-    "prettier": "^1.14.3"
+    "postcss": "^8.3.11",
+    "postcss-scss": "^4.0.2",
+    "prettier": "^2.4.1"
+  },
+  "peerDependencies": {
+    "postcss": "^8.0.0"
   },
   "scripts": {
     "test": "ava",
     "release": "npmpub",
     "prettier": "prettier --print-width=120 --tab-width=4 --single-quote --trailing-comma=es5 --no-semi --write 'lib/*.js' || true"
+  },
+  "ava": {
+    "require": [
+      "esm"
+    ]
   }
 }
