--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "devDependencies": {
     "ava": "^3.15.0",
     "esm": "^3.2.25",
-    "npmpub": "4",
+    "npmpub": "5",
     "postcss": "^8.3.11",
     "postcss-scss": "^4.0.2",
     "prettier": "^2.4.1"
   },
   "peerDependencies": {
-    "postcss": "^8.0.0"
+    "postcss": "8"
   },
   "scripts": {
     "test": "ava",
