--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   "devDependencies": {
     "ava": "^3.15.0",
     "esm": "^3.2.25",
-    "npmpub": "5",
     "postcss": "^8.3.11",
     "postcss-scss": "^4.0.2",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "standard-version": "^9.3.2"
   },
   "peerDependencies": {
     "postcss": "8"
   },
   "scripts": {
     "test": "ava",
-    "release": "npmpub",
+    "release": "standard-version",
     "prettier": "prettier --print-width=120 --tab-width=4 --single-quote --trailing-comma=es5 --no-semi --write 'lib/*.js' || true"
   },
   "ava": {
